[workspace]
members = [
    "src/problem-one",
    "src/problem-two",
    "src/problem-four",
    "src/problem-five",
    "src/problem-six",
    "src/problem-sixteen",
    "src/problem-twenty-two",
    "src/problem-thirty-six",
    "src/problem-thirty-four",
    "src/problem-twenty-five",
    "src/problem-fifty-two",
    "src/problem-one-hundred-and-two",
    "src/problem-one-hundred-and-forty-five",
    "src/problem-fifty-five",
    "src/problem-seventeen",
    "src/problem-four-hundred-and-eighty-seven"
]
